--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
         <title>Modele</title>
+		<script src="https://kit.fontawesome.com/06c14c0baa.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="root"></div>
